fixed a few alignment issues

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -161,8 +161,7 @@
     margin-top: 8px;
   }
   .delete-x{
-    position: relative;
-    top: 6px;
+    margin-top: 7px;
   }
   .member-users{
     margin-top: 8px;
